--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,179 @@ Green: #00B172
 White: #FFF
 
 */
+
+* {
+  font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-size: 1.5em;
+}
+
+nav-bar {
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 36px;
+  height: 124px;
+  width: 100%;
+  background-color: white;
+}
+
+.logo {
+  max-width: auto;
+  height: 76px;
+  margin-top: 8px;
+}
+#nav-items a {
+  text-decoration: none;
+  color: black;
+  margin-left: 40px;
+}
+
+#nav-items a:hover {
+  border-bottom: 1px solid black;
+}
+
+/*
+.container {
+ display: flex;
+justify-content: center;
+align-items: center;
+}
+*/
+
+.container {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.background-image {
+  max-width: 100%;
+  height: auto;
+}
+
+.center {
+  text-align: center;
+  margin: -42% auto 30% auto;
+  color: rgb(255, 255, 255);
+  max-width: 60%;
+}
+
+.center h1 {
+  font-size: 4em;
+  font-weight: 600;
+  margin-bottom: 24px;
+}
+
+.center p {
+  font-size: 1.5em;
+}
+
+/* Second section */
+
+.header {
+  display: flex;
+}
+
+.header span {
+  margin: 28px auto;
+  font-size: 1.8em;
+  font-weight: 600;
+  padding-bottom: 10px;
+  border-bottom: 5px solid #00b172;
+}
+
+#sec02-paragraph {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: baseline;
+  margin: 4% 22px 8% 22px;
+  padding: 0 20px;
+  line-height: 1.6em;
+}
+
+#sec02-paragraph h3 {
+  font-size: 1.5em;
+  margin-bottom: 36px;
+  color: #00b172;
+}
+
+.sec02 p {
+  font-size: 1.3em;
+  color: black;
+}
+
+.icon01 {
+  width: 180px;
+}
+.icon02 {
+  width: 170px;
+}
+.icon03 {
+  width: 180px;
+}
+
+.services-block {
+  text-align: center;
+  width: 25%;
+}
+
+/* Third section */
+
+.sec03 {
+  margin: 48px 48px;
+  background-color: #00b172;
+}
+
+.heading {
+  padding: 80px 0 0 120px;
+}
+
+.sec03 span {
+  font-size: 1.8em;
+  font-weight: 600;
+  padding-bottom: 10px;
+  border-bottom: 5px solid #ffffff;
+  color: white;
+}
+
+.app-example {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 76px;
+  padding: 10px 50px 50px 50px;
+}
+
+.app-logo {
+  width: 180px;
+  margin: 0 120px 0 120px;
+}
+
+.app-if {
+  width: 448px;
+}
+
+.options {
+  width: 30%;
+}
+
+.options h3,
+p {
+  color: white;
+  margin-bottom: 40px;
+}
+
+.options h3 {
+  font-size: 1.5em;
+}
+
+.options p {
+  font-size: 1.1em;
+  line-height: 1.75em;
+}
